EVEX - proper one-to-many
EVEX - proper one to many mapping (using merge, not match)

--- a/EVEX/EVEX_dsgen.Rmd
+++ b/EVEX/EVEX_dsgen.Rmd
@@ -114,8 +114,13 @@ pairs_entrezgene_id = Homo_sapiens_EVEX_relations[, as.character(unique(c(source
 # entrezgene_uniprot_ENSEMBL_z = unique(entrezgene_uniprot_ENSEMBL[, .(entrezgene, uniprot_swissprot)])
 # sum(table(entrezgene_uniprot_ENSEMBL_z[, .N , by = entrezgene]$N)[-1])/sum(table(entrezgene_uniprot_ENSEMBL_z[, .N , by = entrezgene]$N)) # 0.7310322
 
-Homo_sapiens_EVEX_relations[, source_uniprotkb_id := entrezgene2uniprot$UNIPROTKB[match(source_entrezgene_id, entrezgene2uniprot$ENTREZ_GENE)]]
-Homo_sapiens_EVEX_relations[, target_uniprotkb_id := entrezgene2uniprot$UNIPROTKB[match(target_entrezgene_id, entrezgene2uniprot$ENTREZ_GENE)]]
+Homo_sapiens_EVEX_relations = unique(Homo_sapiens_EVEX_relations)
+entrezgene2uniprot = unique(entrezgene2uniprot)
+Homo_sapiens_EVEX_relations = merge(x = Homo_sapiens_EVEX_relations, y = entrezgene2uniprot, by.x = "source_entrezgene_id", by.y = "ENTREZ_GENE", all.x = T, allow.cartesian=TRUE)
+setnames(Homo_sapiens_EVEX_relations, colnames(Homo_sapiens_EVEX_relations)[ncol(Homo_sapiens_EVEX_relations)], "source_uniprotkb_id")
+Homo_sapiens_EVEX_relations = merge(x = Homo_sapiens_EVEX_relations, y = entrezgene2uniprot, by.x = "target_entrezgene_id", by.y = "ENTREZ_GENE", all.x = T, allow.cartesian=TRUE)
+setnames(Homo_sapiens_EVEX_relations, colnames(Homo_sapiens_EVEX_relations)[ncol(Homo_sapiens_EVEX_relations)], "target_uniprotkb_id")
+
 # filter out interactions with unmapped source or target id
 Homo_sapiens_EVEX_relations = Homo_sapiens_EVEX_relations[!(is.na(source_uniprotkb_id) | is.na(target_uniprotkb_id)),]
 # filter for interaction types
@@ -129,6 +134,7 @@ EVEX_pairs[, pair_id := apply(data.table(ida_clean,idb_clean,stringsAsFactors = 
 
 # Mapping between general_event_id and publicationID
 EVEX_pairs[, pmids_mixed := Homo_sapiens_EVEX_articles$article_id[match(general_event_id, Homo_sapiens_EVEX_articles$general_event_id)]]
+merge(x = EVEX_pairs, y = Homo_sapiens_EVEX_articles, by.x = "general_event_id", by.y = "general_event_id", all.x = T)
 EVEX_pairs[, pmids_mixed := gsub("PMID: ", "",pmids_mixed)]
 EVEX_pairs[, pmids_mixed := gsub("PMCID: ", "",pmids_mixed)]
 # Downloading PMCID to PMID conversion table
