--- a/dsp_comparison/dsp_comparison.Rmd
+++ b/dsp_comparison/dsp_comparison.Rmd
@@ -1,10 +1,18 @@
 ---
-title: Comparison of IMEx with other protein association datasets
-date: 2016-12-19
-author: Pablo Porras
+title: "Comparison of IMEx with other protein association datasets"
+author: "Pablo Porras"
+date: '2016-12-19'
+output:
+  html_document:
+    fig_height: 16
+    fig_width: 8
+    keep_md: yes
+    toc: yes
+runtime: shiny
 ---
 ```{r set-options, echo=FALSE}
-options(width = 80)
+options(width = 80, defaultWidth = 1000, defaultHeight = 1200)
+#runtime: shiny
 ```
 Estimating the size of the uncurated interactome
 ========================================================
@@ -17,11 +25,16 @@ IMPORTANT: This set of scripts assume the different referenced datasets have bee
 
 #### Required libraries
 ```{r libraries,message=FALSE,warning=FALSE}
+suppressPackageStartupMessages({
 library(plyr)
 library(dplyr)
 library(data.table)
 library(UpSetR)
 library(splitstackshape)
+library(ggplot2)
+library(shiny)
+library(htmlwidgets)
+})
 ```
 ### Part 1: Load datasets
 
@@ -30,7 +43,7 @@ library(splitstackshape)
 I select only purely human interactions here (interactions where both proteins are human). 
 
 ```{r warning=FALSE,message=FALSE}
-imex_full <- fread("../IMEx/results/imex_full.txt", header=T, sep="\t",colClasses="character",data.table = F)
+imex_full <- fread("../IMEx/results/imex_full.txt", header=T, sep="\t",colClasses="character",data.table = T)
 imex_human <- unique(subset(imex_full,taxid_a=="9606" & taxid_b=="9606"))
 imex_human$imex <- 1
 imex_human_sel <- unique(select(imex_human,pair_id=pair_id_clean,pmid=pubid,imex))
@@ -42,10 +55,10 @@ The dataset contains `r nrow(imex_pairs)` protein interactions recorded in `r nr
 
 #### Reactome data
 
-```{r}
+```{r, fig.height=8, fig.width=8}
 setwd("../reactome_interactions/results/")
 system("gunzip -k pairs_pmid_reactome.txt.gz")
-reactome_pairs_pmids <- fread("pairs_pmid_reactome.txt",header=T,sep="\t",colClasses=c("character","character","numeric"),data.table = F)
+reactome_pairs_pmids <- fread("pairs_pmid_reactome.txt",header=T,sep="\t",colClasses=c("character","character","numeric"),data.table = T)
 system("rm pairs_pmid_reactome.txt")
 setwd("../../dsp_comparison/")
 
@@ -57,10 +70,10 @@ The reactome dataset contains `r nrow(reactome_pairs)` protein associations reco
 
 #### Text-mining EPMC data
 
-```{r}
+```{r, fig.height=8, fig.width=8}
 setwd("../epmc_text_mining/results/")
 system("gunzip -k pairs_pmids_tm.txt.gz")
-tm_pairs_pmids <- fread("pairs_pmids_tm.txt",header=T,sep="\t",colClasses=c("character","character","numeric"),data.table = F)
+tm_pairs_pmids <- fread("pairs_pmids_tm.txt",header=T,sep="\t",colClasses=c("character","character","numeric"),data.table = T)
 system("rm pairs_pmids_tm.txt")
 setwd("../../dsp_comparison/")
 
@@ -73,16 +86,86 @@ The text-mining EPMC dataset contains `r nrow(tm_pairs)` protein associations re
 
 #### IID predictions data
 
-```{r}
-iid_pred_pairs <- fread("../iid_predictions/results/pairs_iid_pred.txt",header=T,sep="\t",colClasses=c("character","numeric"),data.table=F)
+```{r, fig.height=8, fig.width=8}
+iid_pred_pairs <- fread("../iid_predictions/results/pairs_iid_pred.txt",header=T,sep="\t",colClasses=c("character","numeric"),data.table=T)
 ```
 
 The IID-predictions dataset contains `r nrow(iid_pred_pairs)` protein associations.
 
+#### Text-mining EVEX data
+
+```{r, fig.height=8, fig.width=8}
+setwd("../EVEX/results/")
+EVEX_pairs_pmids <- fread("pairs_pmids_EVEX_shallow.txt",header=T,sep="\t",colClasses=c("character","character","character","character","character","numeric"),data.table = T)
+setwd("../../dsp_comparison/")
+
+EVEX_pairs_pmids_sel <- unique(select(EVEX_pairs_pmids, pair_id=pair_id_clean, pmid=pubid,EVEX))
+EVEX_pairs <- unique(select(EVEX_pairs_pmids, pair_id=pair_id_clean,EVEX))
+EVEX_pmids <- unique(select(EVEX_pairs_pmids, pmid=pubid,EVEX))
+```
+
+The text-mining EVEX dataset contains `r nrow(EVEX_pairs)` protein associations recorded in `r nrow(EVEX_pmids)` publications.
+
+#### BioGRID data
+
+```{r, fig.height=8, fig.width=8}
+setwd("../BioGRID/results/")
+BioGRID_pairs_pmids <- fread("pairs_pmids_biogrid.txt",header=T,sep="\t",colClasses=c("character","character","numeric"),data.table = T)
+setwd("../../dsp_comparison/")
+
+BioGRID_pairs_pmids_sel <- unique(select(BioGRID_pairs_pmids, pair_id=pair_id_clean, pmid=pubid, BioGRID = biogrid))
+BioGRID_pairs <- unique(select(BioGRID_pairs_pmids, pair_id=pair_id_clean,BioGRID = biogrid))
+BioGRID_pmids <- unique(select(BioGRID_pairs_pmids, pmid=pubid,BioGRID = biogrid))
+```
+
+The BioGRID dataset contains `r nrow(BioGRID_pairs)` protein associations recorded in `r nrow(BioGRID_pmids)` publications.
+
+#### GO IPI data (EBI_GOA_nonIntAct)
+
+```{r, fig.height=8, fig.width=8}
+setwd("../GO_IPI/results/")
+GO_IPI_pairs_pmids <- fread("pairs_pmids_EBI_GOA_nonIntAct.txt",header=T,sep="\t",colClasses=c("character","character","numeric"),data.table = T)
+setwd("../../dsp_comparison/")
+
+GO_IPI_pairs_pmids_sel <- unique(select(GO_IPI_pairs_pmids, pair_id=pair_id_clean, pmid=pubid, GO_IPI = EBI_GOA_nonIntAct))
+GO_IPI_pairs <- unique(select(GO_IPI_pairs_pmids, pair_id=pair_id_clean,GO_IPI = EBI_GOA_nonIntAct))
+GO_IPI_pmids <- unique(select(GO_IPI_pairs_pmids, pmid=pubid,GO_IPI = EBI_GOA_nonIntAct))
+```
+
+The BioGRID dataset contains `r nrow(GO_IPI_pairs)` protein associations recorded in `r nrow(GO_IPI_pmids)` publications.
+
+#### OmniPath interaction data 
+
+```{r, fig.height=8, fig.width=8}
+setwd("../OmniPath/results/")
+OmniPath_interaction_pairs_pmids <- fread("pairs_pmids_OmniPath_interactions_minimal.txt",header=T,sep="\t",colClasses=c("character","character","character","character","character","numeric"),data.table = T)
+setwd("../../dsp_comparison/")
+
+OmniPath_interaction_pairs_pmids_sel <- unique(select(OmniPath_interaction_pairs_pmids, pair_id=pair_id_clean, pmid=pubid, OmniPath_interactions))
+OmniPath_interaction_pairs <- unique(select(OmniPath_interaction_pairs_pmids, pair_id=pair_id_clean,OmniPath_interactions))
+OmniPath_interaction_pmids <- unique(select(OmniPath_interaction_pairs_pmids, pmid=pubid,OmniPath_interactions))
+```
+
+The BioGRID dataset contains `r nrow(OmniPath_interaction_pairs)` protein associations recorded in `r nrow(OmniPath_interaction_pmids)` publications.
+
+#### OmniPath ptm (post-translational modifications) data 
+
+```{r, fig.height=8, fig.width=8}
+setwd("../OmniPath/results/")
+OmniPath_ptm_pairs_pmids <- fread("pairs_pmids_OmniPath_ptm_interactions_minimal.txt",header=T,sep="\t",colClasses=c("character","character","character","character","character","numeric"),data.table = T)
+setwd("../../dsp_comparison/")
+
+OmniPath_ptm_pairs_pmids_sel <- unique(select(OmniPath_ptm_pairs_pmids, pair_id=pair_id_clean, pmid=pubid, OmniPath_ptm))
+OmniPath_ptm_pairs <- unique(select(OmniPath_ptm_pairs_pmids, pair_id=pair_id_clean,OmniPath_ptm))
+OmniPath_ptm_pmids <- unique(select(OmniPath_ptm_pairs_pmids, pmid=pubid,OmniPath_ptm))
+```
+
+The BioGRID dataset contains `r nrow(OmniPath_ptm_pairs)` protein associations recorded in `r nrow(OmniPath_ptm_pmids)` publications.
+
 ### Part 2: Generating comparison dataset at the pair level
 
-```{r}
-all_df <- list(imex_pairs,reactome_pairs,tm_pairs,iid_pred_pairs)
+```{r, fig.height=8, fig.width=8}
+all_df <- list(imex_pairs,reactome_pairs,tm_pairs,iid_pred_pairs, EVEX_pairs, BioGRID_pairs, GO_IPI_pairs, OmniPath_interaction_pairs, OmniPath_ptm_pairs)
 
 comp_table <- Reduce(function(...) merge(..., all=TRUE), all_df)
 
@@ -90,41 +173,177 @@ comp_table <- Reduce(function(...) merge(..., all=TRUE), all_df)
 
 comp_table_final <- comp_table
 comp_table_final[is.na(comp_table_final <- comp_table)] <- 0
-write.table(comp_table_final,"./results/comp_table_final.txt",col.names=T,row.names=F,sep="\t",quote=F)
-system("gzip ./results/comp_table_final.txt")
+comp_table_final = unique(comp_table_final)
+fwrite(comp_table_final,"./results/comp_table_final.txt",col.names=T,row.names=F,sep="\t",quote=F)
+system("gzip ./results/comp_table_final.txt --force")
+unlink("./results/comp_table_final.txt")
 ```
 
 The comparison set gives a total number of `r nrow(comp_table_final)` potentially interacting pairs, of which `r nrow(comp_table_final[comp_table_final$imex==0,])` (`r round(nrow(comp_table_final[comp_table_final$imex==0,])*100/nrow(comp_table_final),2)`%) are not curated in IMEx. 
 
 I produce a plot with the summary of the overlap between the different datasets evaluated. 
 
+```{r visualize_overlaps, fig.height=8, fig.width=8}
+groups = colnames(comp_table_final)[2:ncol(comp_table_final)]
+comp_table_final[, overlaps := paste0(imex, reactome, tm_epmc, iid_pred, EVEX, BioGRID, GO_IPI, OmniPath_interactions, OmniPath_ptm)]
+comp_table_final[, N_overlaps := sum(imex, reactome, tm_epmc, iid_pred, EVEX, BioGRID, GO_IPI, OmniPath_interactions, OmniPath_ptm), by = pair_id]
+comp_table_final[, N_per_overlaps := .N, by = overlaps]
+comp_table_final[, N_per_N_overlaps := .N, by = N_overlaps]
+
+N_overlaps = unique(comp_table_final[,.(N_overlaps, N_per_N_overlaps)])
+N_overlaps = N_overlaps[order(N_per_N_overlaps, decreasing = T),]
+qplot(label = N_overlaps$N_per_N_overlaps, y = N_overlaps$N_per_N_overlaps, x = N_overlaps$N_overlaps,  geom = "text") + scale_y_log10(labels = 10^c(1:7), breaks = 10^c(1:7)) +
+        ggtitle("The number of interacting pairs and the number of resources the pairs are shared between") + ylab("the number of interacting pairs, log10 scale")+ xlab("the number of resources")+scale_x_continuous(labels = N_overlaps$N_overlaps, breaks = N_overlaps$N_overlaps)
+
+overlaps = unique(comp_table_final[,.(overlaps, N_per_overlaps)])
+overlaps = overlaps[order(N_per_overlaps, decreasing = T),]
+```
+
+### Interactive plot below shows the overlaps between selected resources (interacting pairs)
+
+```{r Shiny, message=F, warning=F}
+# checkboxGroupInput("groups_sel", NULL, choices=groups,
+#                selected=groups[1:4])
+ 
+shinyApp(
+ui = fluidPage(
+        fluidRow(
+                { 
+                        library(ggplot2)
+                        library(data.table)
+                        library(R.utils)
+                        gunzip("./results/comp_table_final.txt.gz", overwrite =T, remove =F)
+                comp_table_final = fread("./results/comp_table_final.txt")
+                unlink("./results/comp_table_final.txt")
+groups = colnames(comp_table_final)[2:ncol(comp_table_final)]
+comp_table_final[, overlaps := paste0(imex, reactome, tm_epmc, iid_pred, EVEX, BioGRID, GO_IPI, OmniPath_interactions, OmniPath_ptm)]
+comp_table_final[, N_overlaps := sum(imex, reactome, tm_epmc, iid_pred, EVEX, BioGRID, GO_IPI, OmniPath_interactions, OmniPath_ptm), by = pair_id]
+comp_table_final[, N_per_overlaps := .N, by = overlaps]
+comp_table_final[, N_per_N_overlaps := .N, by = N_overlaps]
+
+N_overlaps = unique(comp_table_final[,.(N_overlaps, N_per_N_overlaps)])
+N_overlaps = N_overlaps[order(N_per_N_overlaps, decreasing = T),]
+overlaps = unique(comp_table_final[,.(overlaps, N_per_overlaps)])
+overlaps = overlaps[order(N_per_overlaps, decreasing = T),]},
+                
+        column(4,
+                selectInput("groups_sel1", "Choose a dataset 1:",
+              choices = groups, selected = groups[1])
+    ),
+        column(4,
+                selectInput("groups_sel2", "Choose a dataset 2:",
+              choices = groups, selected = groups[2])
+    ),
+        column(4,
+                selectInput("groups_sel3", "Choose a dataset 3:",
+              choices = groups, selected = groups[3])
+    ),
+        column(4,
+                selectInput("groups_sel4", "Choose a dataset 4:",
+              choices = groups, selected = groups[4]))
+    ),
+
+mainPanel(
+        tabsetPanel(
+    tabPanel("simplePlot", plotOutput("simplePlot")),
+    tabPanel("detailedPlot", plotOutput("detailedPlot")))
+  )
+),
+server = function(input, output) {
+        
+# labels look like this "0101"
+output$simplePlot <-renderPlot({
+        
+     groups_sel1_4 = c(input$groups_sel1,input$groups_sel2,input$groups_sel3,input$groups_sel4)
+     sel1 = which(colnames(comp_table_final) == input$groups_sel1)
+     sel2 = which(colnames(comp_table_final) == input$groups_sel2)
+     sel3 = which(colnames(comp_table_final) == input$groups_sel3)
+     sel4 = which(colnames(comp_table_final) == input$groups_sel4)
+     sel = c(sel1,sel2,sel3,sel4)
+     sel_plot = comp_table_final[,sel,with = FALSE]
+     setnames(sel_plot, colnames(sel_plot), c("V1", "V2", "V3", "V4"))
+     sel_plot[, overlaps := paste0(V1, V2, V3, V4)]
+     sel_plot[, N_per_overlaps := .N, by = overlaps]
+     if("imex" %in% groups_sel1_4) which(groups_sel1_4 == "imex")
+     inIMEx = sel_plot[, which(groups_sel1_4 == "imex"),with = FALSE]
+     sel_plot[, inIMEx := inIMEx]
+     overlaps = unique(sel_plot[,.(overlaps, N_per_overlaps, inIMEx)])
+     overlaps = overlaps[order(N_per_overlaps, decreasing = T),]
+     qplot(label = overlaps$overlaps, y = overlaps$N_per_overlaps, x = overlaps$overlaps, color = overlaps$inIMEx,  geom = "point") + scale_y_log10() +
+        ggtitle("The number of interacting pairs \n in the combination of resources the pairs are shared between") + ylab("the number of interacting pairs, log10 scale")+ xlab("the combination of resources")+scale_x_discrete(labels = N_overlaps$N_overlaps, breaks = N_overlaps$N_overlaps)+
+             geom_text(aes(y = overlaps$N_per_overlaps+overlaps$N_per_overlaps*0.3, label = overlaps$N_per_overlaps))+
+             geom_text(aes(y = overlaps$N_per_overlaps-overlaps$N_per_overlaps*0.3, label = overlaps$overlaps))+
+             geom_text(aes(x=14,y=max(overlaps$N_per_overlaps)-max(overlaps$N_per_overlaps)*0.5,label = paste(input$groups_sel1, "\n", input$groups_sel2, "\n", input$groups_sel3, "\n", input$groups_sel4, "\n")),colour = "black")+ theme(legend.position="none")
+     }, width = 800, height = 600)
+# labels explain the content
+output$detailedPlot <-renderPlot({
+        groups_sel1_4 = c(input$groups_sel1,input$groups_sel2,input$groups_sel3,input$groups_sel4)
+     sel1 = which(colnames(comp_table_final) == input$groups_sel1)
+     sel2 = which(colnames(comp_table_final) == input$groups_sel2)
+     sel3 = which(colnames(comp_table_final) == input$groups_sel3)
+     sel4 = which(colnames(comp_table_final) == input$groups_sel4)
+     sel = c(sel1,sel2,sel3,sel4)
+     sel_plot = comp_table_final[,sel,with = FALSE]
+     setnames(sel_plot, colnames(sel_plot), c("V1", "V2", "V3", "V4"))
+     
+     sel_plot[V1 == 1, V1_n := input$groups_sel1];sel_plot[V1 == 0, V1_n := "none"]
+     sel_plot[V2 == 1, V2_n := input$groups_sel2];sel_plot[V2 == 0, V2_n := "none"]
+     sel_plot[V3 == 1, V3_n := input$groups_sel3];sel_plot[V3 == 0, V3_n := "none"]
+     sel_plot[V4 == 1, V4_n := input$groups_sel4];sel_plot[V4 == 0, V4_n := "none"]
+     
+     sel_plot[, overlap_names := paste(V1_n, V2_n, V3_n, V4_n, sep = "_g_")]
+     sel_plot[, overlaps := paste0(V1, V2, V3, V4)]
+     sel_plot[, N_per_overlaps := .N, by = overlaps]
+     if("imex" %in% groups_sel1_4) which(groups_sel1_4 == "imex")
+     inIMEx = sel_plot[, which(groups_sel1_4 == "imex"),with = FALSE]
+     sel_plot[, inIMEx := inIMEx]
+     overlaps = unique(sel_plot[,.(overlaps, N_per_overlaps,inIMEx, overlap_names)])
+     overlaps = overlaps[order(N_per_overlaps, decreasing = T),]
+     overlaps[, overlap_names := gsub("none_g_","",overlap_names)]
+     overlaps[, overlap_names := gsub("_g_none_g_","_g_",overlap_names)]
+     overlaps[, overlap_names := gsub("_g_none","",overlap_names)]
+     overlaps[, overlap_names := gsub("_g_","\n",overlap_names)]
+     qplot(label = overlaps$overlaps, y = overlaps$N_per_overlaps, x = overlaps$overlaps, color = overlaps$inIMEx,  geom = "point") + scale_y_log10() +
+        ggtitle("The number of interacting pairs \n in the combination of resources the pairs are shared between") + ylab("the number of interacting pairs, log10 scale")+ xlab("the combination of resources")+scale_x_discrete(labels = N_overlaps$N_overlaps, breaks = N_overlaps$N_overlaps)+
+             geom_text(aes(y = overlaps$N_per_overlaps+overlaps$N_per_overlaps*0.3, label = overlaps$N_per_overlaps))+
+             geom_text(aes(y = overlaps$N_per_overlaps-overlaps$N_per_overlaps*0.3, x = overlaps$overlaps, label = overlaps$overlap_names))+
+             geom_text(aes(x=14,y=max(overlaps$N_per_overlaps)-max(overlaps$N_per_overlaps)*0.5,label = paste(input$groups_sel1, "\n", input$groups_sel2, "\n", input$groups_sel3, "\n", input$groups_sel4, "\n")),colour = "black")+ theme(legend.position="none")
+     }, width = 800, height = 600)
+})
+
+
+#renderTable({
+#  head(cars, input$rows)
+#})
+```
+
+
 ##### Figure 1: Comparison between different protein association datasets
 ```{r echo=FALSE, fig.width=10,fig.height=6}
-upset(comp_table_final, 
-      nsets = 4, 
-      point.size = 6, 
-      line.size = 2, 
-      mainbar.y.label = "Common protein pairs", 
-      sets.x.label = "Nr of protein pairs in dataset", 
-      order.by="freq",
-      decreasing=FALSE,
-      queries = list(
-              list(query = intersects, params = list("reactome","iid_pred","tm_epmc"), color = "blue", active = T),
-              list(query = intersects, params = list("iid_pred","tm_epmc"), color= "cornflowerblue",active = T),
-              list(query = intersects, params = list("reactome","iid_pred"), color= "cornflowerblue",active = T),
-              list(query = intersects, params = list("reactome","tm_epmc"), color= "cornflowerblue",active = T),
-              list(query = intersects, params = list("imex","iid_pred","reactome","tm_epmc"), color= "darkorange2",active = T),
-              list(query = intersects, params = list("imex","reactome","tm_epmc"), color= "orange1",active = T),
-              list(query = intersects, params = list("imex","iid_pred","tm_epmc"), color= "orange1",active = T),
-              list(query = intersects, params = list("imex","iid_pred","reactome"), color= "orange1",active = T),
-              list(query = intersects, params = list("imex","iid_pred"), color= "lightgoldenrod2",active = T),
-              list(query = intersects, params = list("imex","reactome"), color= "lightgoldenrod2",active = T),
-              list(query = intersects, params = list("imex","tm_epmc"), color= "lightgoldenrod2",active = T),
-              list(query = intersects, params = list("imex"), color= "gray70",active = T),
-              list(query = intersects, params = list("reactome"), color= "gray70",active = T),
-              list(query = intersects, params = list("iid_pred"), color= "gray70",active = T),
-              list(query = intersects, params = list("tm_epmc"), color= "gray70",active = T)))
-
+#upset(comp_table_final, 
+#      nsets = 4, 
+#      point.size = 6, 
+#      line.size = 2, 
+#      mainbar.y.label = "Common protein pairs", 
+#      sets.x.label = "Nr of protein pairs in dataset", 
+#      order.by="freq",
+#      decreasing=FALSE,
+#      queries = list(
+#              list(query = intersects, params = list("reactome","iid_pred","tm_epmc"), color = "blue", active = T),
+#              list(query = intersects, params = list("iid_pred","tm_epmc"), color= "cornflowerblue",active = T),
+#              list(query = intersects, params = list("reactome","iid_pred"), color= "cornflowerblue",active = T),
+#              list(query = intersects, params = list("reactome","tm_epmc"), color= "cornflowerblue",active = T),
+#              list(query = intersects, params = list("imex","iid_pred","reactome","tm_epmc"), color= "darkorange2",active = T),
+#              list(query = intersects, params = list("imex","reactome","tm_epmc"), color= "orange1",active = T),
+#              list(query = intersects, params = list("imex","iid_pred","tm_epmc"), color= "orange1",active = T),
+#              list(query = intersects, params = list("imex","iid_pred","reactome"), color= "orange1",active = T),
+#              list(query = intersects, params = list("imex","iid_pred"), color= "lightgoldenrod1",active = T),
+#              list(query = intersects, params = list("imex","reactome"), color= "lightgoldenrod1",active = T),
+#              list(query = intersects, params = list("imex","tm_epmc"), color= "lightgoldenrod1",active = T),
+#              list(query = intersects, params = list("imex"), color= "gray70",active = T),
+#              list(query = intersects, params = list("reactome"), color= "gray70",active = T),
+#              list(query = intersects, params = list("iid_pred"), color= "gray70",active = T),
+#              list(query = intersects, params = list("tm_epmc"), color= "gray70",active = T)))
 ```
 
 I also produce a sub-plot showing exclusively the intersections, so a more informative scale is used. 
@@ -168,7 +387,7 @@ upset(comp_table_final,
 ### Part 3: Generating comparison dataset at the publication level
 
 ```{r}
-allpub_df <- list(imex_pmids,reactome_pmids,tm_pmids)
+allpub_df <- list(imex_pmids,reactome_pmids,tm_pmids, EVEX_pmids, BioGRID_pmids, GO_IPI_pmids, OmniPath_interaction_pmids, OmniPath_ptm_pmids)
 
 pubcomp_table <- Reduce(function(...) merge(..., all=TRUE), allpub_df)
 
@@ -176,16 +395,113 @@ pubcomp_table <- Reduce(function(...) merge(..., all=TRUE), allpub_df)
 
 pubcomp_table_final <- pubcomp_table
 pubcomp_table_final[is.na(pubcomp_table_final <- pubcomp_table)] <- 0
-write.table(pubcomp_table_final,"./results/pubcomp_table_final.txt",col.names=T,row.names=F,sep="\t",quote=F)
-system("gzip ./results/pubcomp_table_final.txt")
+fwrite(pubcomp_table_final,"./results/pubcomp_table_final.txt",col.names=T,row.names=F,sep="\t",quote=F)
+system("gzip ./results/pubcomp_table_final.txt --force")
 ```
 
 The comparison set gives a total number of `r nrow(pubcomp_table_final)` publications, of which `r nrow(pubcomp_table_final[pubcomp_table_final$imex==0,])` (`r round(nrow(pubcomp_table_final[pubcomp_table_final$imex==0,])*100/nrow(pubcomp_table_final),2)`%) are not curated in IMEx. 
 
 I produce a plot with the summary of the overlap between the different datasets evaluated. 
 
+### Interactive plot below shows the overlaps between selected resources (publications)
+
+```{r visualize_overlaps_publications, fig.height=8, fig.width=6}
+pubgroups = colnames(pubcomp_table_final)[2:ncol(pubcomp_table_final)]
+pubcomp_table_final[, puboverlaps := paste0(imex, reactome, tm_epmc, EVEX, BioGRID, GO_IPI, OmniPath_interactions, OmniPath_ptm)]
+pubcomp_table_final[, N_puboverlaps := sum(imex, reactome, tm_epmc, EVEX, BioGRID, GO_IPI, OmniPath_interactions, OmniPath_ptm), by = pmid]
+pubcomp_table_final[, N_per_puboverlaps := .N, by = puboverlaps]
+pubcomp_table_final[, N_per_N_puboverlaps := .N, by = N_puboverlaps]
+
+N_puboverlaps = unique(pubcomp_table_final[,.(N_puboverlaps, N_per_N_puboverlaps)])
+N_puboverlaps = N_puboverlaps[order(N_per_N_puboverlaps, decreasing = T),]
+qplot(label = N_puboverlaps$N_per_N_puboverlaps, y = N_puboverlaps$N_per_N_puboverlaps, x = N_puboverlaps$N_puboverlaps,  geom = "text") + scale_y_log10(labels = 10^c(1:7), breaks = 10^c(1:7)) +
+        ggtitle("The number of interacting pairs and the number of resources the pairs are shared between") + ylab("the number of interacting pairs, log10 scale")+ xlab("the number of resources")+scale_x_continuous(labels = N_puboverlaps$N_puboverlaps, breaks = N_puboverlaps$N_puboverlaps)
+
+puboverlaps = unique(pubcomp_table_final[,.(puboverlaps, N_per_puboverlaps)])
+puboverlaps = puboverlaps[order(N_per_puboverlaps, decreasing = T),]
+```
+
+```{r Shiny_publications, eval=T}
+# checkboxGroupInput("groups_sel", NULL, choices=pubgroups,
+#                selected=pubgroups[1:4])
+sidebarPanel(
+    selectInput("pubgroups_sel1", "Choose a dataset 1:",
+              choices = pubgroups, selected = pubgroups[1]),
+    selectInput("pubgroups_sel2", "Choose a dataset 2:",
+              choices = pubgroups, selected = pubgroups[2]),
+    selectInput("pubgroups_sel3", "Choose a dataset 3:",
+              choices = pubgroups, selected = pubgroups[3]),
+    selectInput("pubgroups_sel4", "Choose a dataset 4:",
+              choices = pubgroups, selected = pubgroups[4])
+)
+
+# labels look like this "0101"
+renderPlot({
+        pubgroups_sel1_4 = c(input$pubgroups_sel1,input$pubgroups_sel2,input$pubgroups_sel3,input$pubgroups_sel4)
+     sel1 = which(colnames(pubcomp_table_final) == input$pubgroups_sel1)
+     sel2 = which(colnames(pubcomp_table_final) == input$pubgroups_sel2)
+     sel3 = which(colnames(pubcomp_table_final) == input$pubgroups_sel3)
+     sel4 = which(colnames(pubcomp_table_final) == input$pubgroups_sel4)
+     sel = c(sel1,sel2,sel3,sel4)
+     sel_plot = pubcomp_table_final[,sel,with = FALSE]
+     setnames(sel_plot, colnames(sel_plot), c("V1", "V2", "V3", "V4"))
+     sel_plot[, puboverlaps := paste0(V1, V2, V3, V4)]
+     sel_plot[, N_per_puboverlaps := .N, by = puboverlaps]
+     if("imex" %in% pubgroups_sel1_4) which(pubgroups_sel1_4 == "imex")
+     inIMEx = sel_plot[, which(pubgroups_sel1_4 == "imex"),with = FALSE]
+     sel_plot[, inIMEx := inIMEx]
+     puboverlaps = unique(sel_plot[,.(puboverlaps, N_per_puboverlaps, inIMEx)])
+     puboverlaps = puboverlaps[order(N_per_puboverlaps, decreasing = T),]
+     qplot(label = puboverlaps$puboverlaps, y = puboverlaps$N_per_puboverlaps, x = puboverlaps$puboverlaps, color = puboverlaps$inIMEx,  geom = "point") + scale_y_log10() +
+        ggtitle("The number of publications \n in the combination of resources the pairs are shared between") + ylab("the number of interacting pairs, log10 scale")+ xlab("the combination of resources")+scale_x_discrete(labels = N_puboverlaps$N_puboverlaps, breaks = N_puboverlaps$N_puboverlaps)+
+             geom_text(aes(y = puboverlaps$N_per_puboverlaps+puboverlaps$N_per_puboverlaps*0.3, label = puboverlaps$N_per_puboverlaps))+
+             geom_text(aes(y = puboverlaps$N_per_puboverlaps-puboverlaps$N_per_puboverlaps*0.3, label = puboverlaps$puboverlaps))+
+             geom_text(aes(x=14,y=max(puboverlaps$N_per_puboverlaps)-max(puboverlaps$N_per_puboverlaps)*0.5,label = paste(input$pubgroups_sel1, "\n", input$pubgroups_sel2, "\n", input$pubgroups_sel3, "\n", input$pubgroups_sel4, "\n")),colour = "black")+ theme(legend.position="none")
+     }, width = 1000, height = 600)
+
+# labels explain the content
+renderPlot({
+        pubgroups_sel1_4 = c(input$pubgroups_sel1,input$pubgroups_sel2,input$pubgroups_sel3,input$pubgroups_sel4)
+     sel1 = which(colnames(pubcomp_table_final) == input$pubgroups_sel1)
+     sel2 = which(colnames(pubcomp_table_final) == input$pubgroups_sel2)
+     sel3 = which(colnames(pubcomp_table_final) == input$pubgroups_sel3)
+     sel4 = which(colnames(pubcomp_table_final) == input$pubgroups_sel4)
+     sel = c(sel1,sel2,sel3,sel4)
+     sel_plot = pubcomp_table_final[,sel,with = FALSE]
+     setnames(sel_plot, colnames(sel_plot), c("V1", "V2", "V3", "V4"))
+     
+     sel_plot[V1 == 1, V1_n := input$pubgroups_sel1];sel_plot[V1 == 0, V1_n := "none"]
+     sel_plot[V2 == 1, V2_n := input$pubgroups_sel2];sel_plot[V2 == 0, V2_n := "none"]
+     sel_plot[V3 == 1, V3_n := input$pubgroups_sel3];sel_plot[V3 == 0, V3_n := "none"]
+     sel_plot[V4 == 1, V4_n := input$pubgroups_sel4];sel_plot[V4 == 0, V4_n := "none"]
+     
+     sel_plot[, overlap_names := paste(V1_n, V2_n, V3_n, V4_n, sep = "_g_")]
+     sel_plot[, puboverlaps := paste0(V1, V2, V3, V4)]
+     sel_plot[, N_per_puboverlaps := .N, by = puboverlaps]
+     if("imex" %in% pubgroups_sel1_4) which(pubgroups_sel1_4 == "imex")
+     inIMEx = sel_plot[, which(pubgroups_sel1_4 == "imex"),with = FALSE]
+     sel_plot[, inIMEx := inIMEx]
+     puboverlaps = unique(sel_plot[,.(puboverlaps, N_per_puboverlaps,inIMEx, overlap_names)])
+     puboverlaps = puboverlaps[order(N_per_puboverlaps, decreasing = T),]
+     puboverlaps[, overlap_names := gsub("none_g_","",overlap_names)]
+     puboverlaps[, overlap_names := gsub("_g_none_g_","_g_",overlap_names)]
+     puboverlaps[, overlap_names := gsub("_g_none","",overlap_names)]
+     puboverlaps[, overlap_names := gsub("_g_","\n",overlap_names)]
+     qplot(label = puboverlaps$puboverlaps, y = puboverlaps$N_per_puboverlaps, x = puboverlaps$puboverlaps, color = puboverlaps$inIMEx,  geom = "point") + scale_y_log10() +
+        ggtitle("The number of publications \n in the combination of resources the pairs are shared between") + ylab("the number of interacting pairs, log10 scale")+ xlab("the combination of resources")+scale_x_discrete(labels = N_puboverlaps$N_puboverlaps, breaks = N_puboverlaps$N_puboverlaps)+
+             geom_text(aes(y = puboverlaps$N_per_puboverlaps+puboverlaps$N_per_puboverlaps*0.3, label = puboverlaps$N_per_puboverlaps))+
+             geom_text(aes(y = puboverlaps$N_per_puboverlaps-puboverlaps$N_per_puboverlaps*0.3, x = puboverlaps$puboverlaps, label = puboverlaps$overlap_names))+
+             geom_text(aes(x=14,y=max(puboverlaps$N_per_puboverlaps)-max(puboverlaps$N_per_puboverlaps)*0.5,label = paste(input$pubgroups_sel1, "\n", input$pubgroups_sel2, "\n", input$pubgroups_sel3, "\n", input$pubgroups_sel4, "\n")),colour = "black")+ theme(legend.position="none")
+     }, width = 1000, height = 600)
+
+#renderTable({
+#  head(cars, input$rows)
+#})
+```
+
+
 ##### Figure 3: Comparison between different protein association datasets at the publication level
-```{r echo=FALSE, fig.width=10,fig.height=6}
+```{r echo=FALSE, fig.width=10,fig.height=6, eval=F}
 upset(pubcomp_table_final, 
       nsets = 3, 
       point.size = 6, 
