--- a/dsp_comparison/dsp_comparison_shiny.Rmd
+++ b/dsp_comparison/dsp_comparison_shiny.Rmd
@@ -25,6 +25,11 @@ IMPORTANT: This set of scripts assume the different referenced datasets have bee
 
 #### Required libraries
 ```{r libraries,message=FALSE,warning=FALSE}
+# install packages if some are not already installed
+packages = c("plyr","dplyr","data.table","UpSetR", "splitstackshape", "ggplot2", "shiny", "htmlwidgets")
+if(mean(packages %in% installed.packages()) != 1){
+        install.packages(packages[!packages %in% installed.packages()])
+}
 suppressPackageStartupMessages({
 library(plyr)
 library(dplyr)
